--- a/CompositeVideoOscilloscope.csproj
+++ b/CompositeVideoOscilloscope.csproj
@@ -8,5 +8,6 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="NetMq" Version="*" />
+    <PackageReference Include="Newtonsoft.Json" Version="*" />
   </ItemGroup>
 </Project>
