--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "CompositeVideoOscilloscope": {
       "commandName": "Project",
-      "commandLineArgs": "c:\\users\\marti\\_osc.json"
+      "commandLineArgs": "c:\\users\\marti\\__osc.json"
     }
   }
 }
